--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
@@ -19,12 +19,12 @@ for a selected type inside a compilation unit.</div>
 Select a reference to a type in your Java code, and do one of the following:</p></li>
 
 <ul type=circle>
-<li><p>
+<li>
 Select <b>Source ></b>&nbsp;<span class=label><b>Add Import</b></span>
-from the pop-up menu in the editor</p></li>
+from the pop-up menu in the editor</li>
 
-<li><p>
-Select <b>Source</b> > <b>Add Import</b> from the menu bar.</p></li>
+<li>
+Select <b>Source</b> > <b>Add Import</b> from the menu bar.</li>
 
 <li>
 Press <b>Ctrl</b>+<b>Shift</b>+<b>M</b></li>
