--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
@@ -16,27 +16,19 @@ Organizing existing import statements</h1>
 <div class="para">The Java editor can help you improve the existing import
 statements inside a compilation unit.</div>
 
-
-<p class="para">1. Do one of the following while editing your Java code:
-<ol start=1 type=1>
-<ul type=circle>
-<li class="MsoNormal">
-Select <b>Source >&nbsp;<span 
-      class=label>Organize Imports</span></b>
-from the pop-up menu in the editor</li>
-
-<li class="MsoNormal">
-Select <b>Source </b>> <b>Organize Imports</b> from the menu bar</li>
-
-<li class="MsoNormal">
-Press <b>Ctrl</b>+<b>Shift</b>+<b>O</b></li>
-</ul>
-</ol>
-
-<div class="para">2. The Java editor generates a complete list of import
-statements, as specified by the import order preference, and new import
-statements replace the old ones.</div>
-
+  <ol>
+    <li><p class="para">Do one of the following while editing your Java code: </p></li>
+      <ul type=circle>
+        <li class="MsoNormal"> Select <b>Source >&nbsp;<span 
+      class=label>Organize Imports</span></b> from the pop-up menu in the editor</li>
+        <li class="MsoNormal"> Select <b>Source </b>> <b>Organize Imports</b> 
+          from the menu bar</li>
+        <li class="MsoNormal"> Press <b>Ctrl</b>+<b>Shift</b>+<b>O</b></li>
+      </ul>
+    <li><p class="para">The Java editor generates a complete list of import statements, 
+      as specified by the import order preference, and new import statements replace 
+      the old ones.</p></li>
+  </ol>
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-7.htm">Java editor</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
