--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
@@ -12,43 +12,31 @@
 <div class=Section1>
 <h1>
 Setting the order of import statements</h1>
-
-<div class="head">1. From the menu bar, select <b>Window</b> > <b>Preferences</b>.</div>
-
-
-<p class="head">2. In the left pane, expand the <b>Java</b> category and
-select <b>Organize Imports</b>.
-
-<p class="para">3. The Organize Imports page defines the sorting order
-of import statements. In the Imports list, manage the list of package prefixes
-as follows:
-<ol start=3 type=1>
-<ul type=circle>
-<li class="MsoNormal">
-Click&nbsp;<span 
-      class=label><b>Add</span></b> to add a new prefix</li>
-
-<li class="MsoNormal">
-Click&nbsp;<span 
-      class=label><b>Remove</span></b> to remove the
-selected prefix from the list</li>
-
-<li class="MsoNormal">
-Click the&nbsp;<span 
-      class=label><b>Up</span></b> and&nbsp;<span class=label><b>Down</span></b>
-buttons to rearrange the sequence of the list by moving the selected prefix
-up or down</li>
-</ul>
-</ol>
-
-<div class="head">4. In the&nbsp;<span class=label><b>Number of qualified
-imports before * is used</span></b> field, type the number of import statements
-that are allowed to refer to the same package before&nbsp;<span class=filename>&lt;package
-prefix>.*</span> is used. This number is called the import threshold.</div>
-
-
-<p class="head">5. Click&nbsp;<span class=label><b>OK</span></b> when you
-are done.
+  <ol>
+    <li><p class="head">From the menu bar, select <b>Window</b> > <b>Preferences</b>.</p></li>
+    <li><p class="head">In the left pane, expand the <b>Java</b> category and select 
+      <b>Organize Imports</b>. </p></li>
+    <li><p class="para">The Organize Imports page defines the sorting order of import 
+      statements. In the Imports list, manage the list of package prefixes as 
+      follows: </p></li>
+      <ul type=circle>
+        <li class="MsoNormal"> Click&nbsp;<span 
+      class=label><b>Add</b></span> to add a new prefix</li>
+        <li class="MsoNormal"> Click&nbsp;<span 
+      class=label><b>Remove</b></span> to remove the selected prefix from the 
+          list</li>
+        <li class="MsoNormal"> Click the&nbsp;<span 
+      class=label><b>Up</b></span> and&nbsp;<span class=label><b>Down</b></span> 
+          buttons to rearrange the sequence of the list by moving the selected 
+          prefix up or down</li>
+      </ul>
+    <li><p class="head">In the&nbsp;<span class=label><b>Number of qualified imports 
+      before * is used</b></span> field, type the number of import statements 
+      that are allowed to refer to the same package before&nbsp;<span class=filename>&lt;package 
+      prefix>.*</span> is used. This number is called the import threshold.</p></li>
+    <li><p class="head">Click&nbsp;<span class=label><b>OK</b></span> when you are 
+      done. </p></li>
+  </ol>
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-7.htm">Java editor</a>
 <p><img SRC="../images/ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
