--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
@@ -8,35 +8,28 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Replacing a Java element with a local history edition</h1>
-  <p class=head> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Make sure that a Java view is visible.</p>
-  <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Open a Java editor for the Java file in which you want to replace 
-    a Java element with an edition from the local history.</p>
-  <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Activate the editor by clicking its tab in the editor area. The Java 
-    view also displays the Java file.</p>
-  <p class=head>Note: The Package Explorer can be configured to show or not show 
-    Java elements in files. Use <b>Window &gt; Preferences &gt; Java &gt; Appearance 
-    &gt; Show Members in Package Explorer</b> to set your preference.</p>
-  <p class=head> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Select the element that you want to replace.</p>
-  <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> From the element's pop-up menu, select <span class=label><b>Replace 
-    With &gt; Element from Local History</b></span>.</p>
-  <p class=head> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the upper pane of the resulting dialog, all available editions 
-    of the selected element in the local history are displayed.</p>
-  <p class=head> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Select an edition in the upper pane to view the differences between 
-    the selected edition and the edition in the workbench.</p>
-  <p class=head> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> When you have identified the edition with which you want to replace 
-    the existing Java element, click <span class=label><b>Replace</b>.</span></p>
-  <p class=para> 9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> The local history edition replaces the current one in the editor.</p>
-  <p class=para><b>Note:</b> The changed compilation unit has not yet been saved 
-    at this point.</p>
+  <ol>
+    <li><p class=head> Make sure that a Java view is visible.</p></li>
+    <li><p class=head> Open a Java editor for the Java file in which you want to replace 
+      a Java element with an edition from the local history.</p></li>
+    <li><p class=head> Activate the editor by clicking its tab in the editor area. 
+      The Java view also displays the Java file.</p></li>
+    <p class=head>Note: The Package Explorer can be configured to show or not 
+      show Java elements in files. Use <b>Window &gt; Preferences &gt; Java &gt; 
+      Appearance &gt; Show Members in Package Explorer</b> to set your preference.</p>
+    <li><p class=head> Select the element that you want to replace.</p></li>
+    <li><p class=head> From the element's pop-up menu, select <span class=label><b>Replace 
+      With &gt; Element from Local History</b></span>.</p></li>
+    <li><p class=head> In the upper pane of the resulting dialog, all available editions 
+      of the selected element in the local history are displayed.</p></li>
+    <li><p class=head> Select an edition in the upper pane to view the differences 
+      between the selected edition and the edition in the workbench.</p></li>
+    <li><p class=head> When you have identified the edition with which you want to 
+      replace the existing Java element, click <span class=label><b>Replace</b>.</span><</p></li>
+    <li><p class=para> The local history edition replaces the current one in the editor.</p></li>
+    <p class=para><b>Note:</b> The changed compilation unit has not yet been saved 
+      at this point.</p>
+  </ol>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-6.htm">Java views</a><br>
