--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
@@ -8,31 +8,25 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Restoring a deleted workbench element</h1>
-  <p class=head> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Ensure that a Java view that show Java elements inside files (such 
-    as the Outline view) is visible.</p>
-  <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Open the compilation unit to which you want to add a previously removed 
-    Java element from the local history.</p>
-  <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Activate the editor by clicking its tab in the editor area, and the 
-    Java view shows the content of the Java file.</p>
-  <p class=head> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the Java view, select the element to whose container type you want 
-    to restore the deleted element.</p>
-  <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> From the type's pop-up menu in the Java view, select <span
-class=label><b>Restore from Local History</b></span>.</p>
-  <p class=head> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the upper pane of the resulting dialog, all available editions 
-    of the selected element in the local history are displayed.</p>
-  <p class=head> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Select an edition in the upper pane to view the content of the selected 
-    element.</p>
-  <p class=head> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> When you have identified the edition that you want to restore, press 
-    <span class=label><b>Restore</b></span>. The local history edition is loaded 
-    into the editor.</p>
+  <ol>
+    <li><p class=head> Ensure that a Java view that show Java elements inside files 
+      (such as the Outline view) is visible.</p></li>
+    <li><p class=head> Open the compilation unit to which you want to add a previously 
+      removed Java element from the local history.</p></li>
+    <li><p class=head> Activate the editor by clicking its tab in the editor area, 
+      and the Java view shows the content of the Java file.</p></li>
+    <li><p class=head> In the Java view, select the element to whose container type 
+      you want to restore the deleted element.</p></li>
+    <li><p class=head> From the type's pop-up menu in the Java view, select <span
+class=label><b>Restore from Local History</b></span>.</p></li>
+    <li><p class=head> In the upper pane of the resulting dialog, all available editions 
+      of the selected element in the local history are displayed.</p>
+    <li><p class=head> Select an edition in the upper pane to view the content of 
+      the selected element.</p></li>
+    <li><p class=head> When you have identified the edition that you want to restore, 
+      press <span class=label><b>Restore</b></span>. The local history edition 
+      is loaded into the editor.</p></li>
+  </ol>	
   <p class=head><img width=159 height=27 id="_x0000_i1025"
 src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-7.htm">Java editor</a></p>
