--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -15,24 +15,19 @@ Formatting files or portions of code</h1>
 
 <div class="para">To format Java code:</div>
 
-
-<p class="para">1.<span style='font:7.0pt "Times New Roman"'></span>Use
-the Code Formatting Preferences page (<b>Window</b> > <b>Preferences</b>
-> <b>Java</b> > <b>Code Formatter</b>) to specify your preferences for
-code formatting.
-
-<p class="head">2.<span style='font:7.0pt "Times New Roman"'></span>Open
-a Java file and select the code you want to format. If nothing is selected,
-then all of the editor content is formatted.
-
-<p class="head">3.<span style='font:7.0pt "Times New Roman"'></span>Format
-the code by either
-<ul>
-	<li>Selecting <b>Format</b> from the editor's pop-up menu or</li>
-	<li>Pressing <b>Ctrl+Shift+F</b> or</li>
-	<li>Selecting<b>Source > Format</b> from the menu bar.</li>
-</ul>
-
+  <ol>
+    <li><p class="para">Use the Code Formatting Preferences page (<b>Window</b> > 
+      <b>Preferences</b> > <b>Java</b> > <b>Code Formatter</b>) to specify your 
+      preferences for code formatting. </p></li>
+    <li><p class="head">Open a Java file and select the code you want to format. If 
+      nothing is selected, then all of the editor content is formatted.  </p></li>
+    <li><p class="head">Format the code by either  </p></li>
+    <ul>
+      <li>Selecting <b>Format</b> from the editor's pop-up menu or</li>
+      <li>Pressing <b>Ctrl+Shift+F</b> or</li>
+      <li>Selecting<b>Source > Format</b> from the menu bar.</li>
+    </ul>
+  </ol>
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
 <br><a href="../concepts/concepts-7.htm">Java editor</a>
