--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
@@ -8,22 +8,19 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Setting code formatting preferences</h1>
-  <p class=head> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> From the workbench menu bar, select <b>Window</b> &gt; <b>Preferences. 
-    </b>The Workbench Preferences page opens.</p>
-  <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the left pane, expand the <b>Java</b> category and select <b>Code 
-    Formatter</b>. The Code Formatter Preferences page opens.</p>
-  <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the <span class=label><b>New Lines</b></span>, <span
+  <ol>
+    <li><p class=head> From the workbench menu bar, select <b>Window</b> &gt; <b>Preferences. 
+      </b>The Workbench Preferences page opens. </p></li>
+    <li><p class=head> In the left pane, expand the <b>Java</b> category and select 
+      <b>Code Formatter</b>. The Code Formatter Preferences page opens. </p></li>
+    <li><p class=head> In the <span class=label><b>New Lines</b></span>, <span
 class=label><b>Line Splitting, </b>and<b> Style</b></span> tabs, select the code 
-    formatting conventions that you want the formatter to follow.</p>
-  <p class=head> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Note that at the bottom of the page, you can observe an example effect 
-    of each individual code formatting option and see a preview of what your formatted 
-    code will look like.</p>
-  <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Click <span class=label><b>OK</b></span> when you are done.</p>
+      formatting conventions that you want the formatter to follow. </p></li>
+    <li><p class=head> Note that at the bottom of the page, you can observe an example 
+      effect of each individual code formatting option and see a preview of what 
+      your formatted code will look like. </p></li>
+    <li><p class=head> Click <span class=label><b>OK</b></span> when you are done. </p></li>
+  </ol>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
