--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
@@ -10,13 +10,15 @@
 <h1 class="Head">
 Building automatically</h1>
 
-<div class="Head">To enable automatic building:</div>
+<div class="Head">
+  <p>To enable automatic building:</p>
+</div>
 
-<blockquote>Select <b>Window &gt; Preferences &gt; Perform build automatically
-on resource modification</b> check box.</blockquote>
+<blockquote>Select the <b>Window &gt; Preferences &gt; Perform build automatically 
+  on resource modification</b> check box.</blockquote>
 To disable automatic building:
-<blockquote>Uncheck <b>Window &gt; Preferences &gt; Perform build automatically
-on resource modification</b> check box.</blockquote>
+<blockquote>Clear the <b>Window &gt; Preferences &gt; Perform build automatically 
+  on resource modification</b> check box.</blockquote>
 
 <div class="Para"></div>
 
