--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-109.htm
@@ -35,8 +35,7 @@ the project that you want to build and:</div>
 <li class="Item">
 Select <b>Project &gt; Build Project </b>from the menu bar or</li>
 
-<li>
-Select <b>Build Project</b> from the project's pop-up menu,</li>
+  <li> Select <b>Build Project</b> from the project's pop-up menu</li>
 </ul>
 
 <h2>
@@ -51,7 +50,7 @@ Full project build</h2>
 
 <div class="Para">To rebuild all resources contained in a project, select
 the project and select <b>Project</b> &gt; <b>Rebuild Project </b>from the
-menu bar.</div>
+menu bar.</div><br>
 
 <p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
 </p><p><a href="../concepts/concepts-4.htm">Java builder</a>
