--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
@@ -12,18 +12,21 @@
 <h1 class="Head">
 Building a Java program</h1>
 
-<div class="Para">A build command compiles workbench resources. A build
-command can be triggered in different ways:</div>
+<div class="Para">
+  <p>A build command compiles workbench resources. A build command can be triggered 
+    in different ways:</p>
+</div>
 
 <ul class="UnorderedList">
-<li class="Item">
-Building automatically: If auto build is turned on (<b>Window > Preferences
-> Perform build automatically on resource modification</b>), then an incremental
-build occurs every time you save a modified workbench resource.</li>
-
-<li class="Item">
-Building manually: You can perform a manual build using a, keyboard shortcut,
-a project's pop-up menu or the <b>Project</b> menu in the menu bar.</li>
+  <li class="Item">
+    <p> Building automatically: If auto build is turned on (<b>Window > Preferences 
+      > Perform build automatically on resource modification</b>), then an incremental 
+      build occurs every time you save a modified workbench resource.</p>
+  </li>
+  <li class="Item">
+    <p> Building manually: You can perform a manual build using a keyboard shortcut, 
+      a project's pop-up menu or the <b>Project</b> menu in the menu bar.</p>
+  </li>
 </ul>
 <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
 <p><a href="../concepts/cbuildcp.htm">Build classpath</a>
