--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -11,10 +11,10 @@
 
 <h1 CLASS="Head"> Using the Java editor</h1>
 <p><b>Note:</b> Keyboard shortcuts used in the section (Java editor-related tasks) 
-  are the default key binding set.<br>
-  You can change between the <b>Default</b> and the <b>Emacs</b> sets by using 
-  the <b>Window &gt; Preferences &gt; Workbench &gt; Editors &gt; Key</b> bindings 
-  combo box.</p>
+  are the default key bindings.<br>
+  You can change between the <b>Default</b> and the <b>Emacs</b> key binding sets 
+  by using the <b>Window &gt; Preferences &gt; Workbench &gt; Editors &gt; Key 
+  bindings</b> combo box.</p>
 <p> <img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159> 
 </p>
 <p><a href="../concepts/concepts-7.htm">Java editor</a>
