--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -36,8 +36,8 @@ junit.textui.TestRunner.java</SPAN>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-In the Outline view, notice that the TestRunner class has a &quot;runnable&quot; icon.</P>
+      <P CLASS="Para"> In the Outline view, notice that the TestRunner class has 
+        an icon which indicates that this class defines a <code>main</code> method.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-58.gif" alt="Outline view with selected TestRunner class">
