--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -168,9 +168,10 @@ Watch the variables (e.g., elementCount) in the Variables view as you step throu
 Click the <SPAN CLASS="Label">
 Step Over</SPAN>
  button to step over the highlighted line of code. Execution will continue at the next line in the same method (or, if you are at the end of a method, it will continue in the method from which the current method was called).</P>
- Note:	The variables that are changed as a result of the last step are highlighted
-in the color specified in the Debug Variable Views "Changed Variable Value Color" preference (default color is red).
-<DIV CLASS="Snapshot">
+ Note: The variables that are changed as a result of the last step are highlighted 
+      in the color specified in the Debug Variable Views "Changed Variable Value 
+      Color" preference (the default color is red). 
+      <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-73.gif" alt="TestCase.java editor showing current line of execution">
 </DIV>
