--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -109,9 +109,9 @@ System.getProperties()</SPAN>.</P>
 </P>
 </TD>
 <TD valign="top" align="left">
-<P CLASS="Para">
-Select the entire line you just typed and select <SPAN CLASS="Label">
-Display</SPAN> from the context menu (or select the equivalent item the editor toolbar or <SPAN CLASS="Label">Run</SPAN> menu).</P>
+      <P CLASS="Para"> Select the entire line you just typed and select <SPAN CLASS="Label"> 
+        Display</SPAN> from the context menu or select the equivalent item the 
+        editor toolbar or <SPAN CLASS="Label">Run</SPAN> menu.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-80.gif" alt="Snippet editor with System.getProperties() selected showing context menu">
