--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -113,9 +113,10 @@ select the runTest() method in the member pane.</div>
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Hierarchy view, click the&nbsp;<span CLASS="Label">Show
-the Supertype Hierarchy</span> button. Then in the member pane, select
-countTestCases() to display the places where this method is overridden.</div>
+      <div CLASS="Para">In the Hierarchy view, click the&nbsp;<span CLASS="Label">Show 
+        the Supertype Hierarchy</span> button. Then on the member pane, select 
+        <code>countTestCases()</code> to display the places where this method 
+        is overridden.</div>
 
 <div CLASS="Snapshot"><img SRC="../images/qs-33.gif" ALT="Supertype hierarchy showing method implementors" height=254 width=269></div>
 </td>
@@ -143,10 +144,11 @@ in the Hierarchy view and also opens in an active editor.</div>
 junit.framework. Use&nbsp;<span CLASS="Label">Open Type Hierarchy</span>
 from its context menu.</div>
 
-<div CLASS="Para">A hierarchy is opened containing all classes of the package.
-For completion of the tree, the hierarchy also shows some classes from
-other packages. These types are shown by a type image with a white fill.&nbsp;
-<br><img SRC="../images/qs-33a.gif" ALT="Hierarchy on a package" height=226 width=263></div>
+      <div CLASS="Para">A hierarchy is opened containing all classes of the package. 
+        For completion of the tree, the hierarchy also shows some classes from 
+        other packages. These types are shown by a type icon with a white fill.&nbsp; 
+        <br>
+        <img SRC="../images/qs-33a.gif" ALT="Hierarchy on a package" height=226 width=263></div>
 </td>
 </tr>
 
@@ -187,8 +189,10 @@ in the Java editor.&nbsp;
 <p>By setting the preference option for viewing type hierarchy perspectives,
 you can have more than one type hierarchy in your workbench and switch
 between them as needed.&nbsp;
-<br>You can also configure whether a new perspective opens in a new window
-under&nbsp;<span class="Label">Window > Preferences > Workbench > Perspectives</span>.</div>
+<br>
+          You can also configure a new perspective to open in a new window under&nbsp;<span class="Label">Window 
+          > Preferences > Workbench > Perspectives</span>.
+      </div>
 </td>
 </tr>
 </table>
