--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_render.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_render.htm
@@ -26,17 +26,19 @@ structure    accessible by a tree, table or list viewer</li>
  JFace    viewer</li>
 </ul>
             Putting the pieces together is quite simple:<br>
-<pre>	<font color="#4444cc">...<br>	IJavaProject jProject= ...;<br><br>	TreeViewer viewer= new TreeViewer(parent); <br>	// Provide members of a compilation unit or class file, but no working copy elements<br>	ITreeContentProvider contentProvider= new StandardJavaElementContentProvider(true, false);<br>	viewer.setContentProvider(contentProvider);<br>	// There are more flags defined in class JavaElementLabelProvider<br>	ILabelProvider labelProvider= new JavaElementLabelProvider(<br>		JavaElementLabelProvider.SHOW_DEFAULT | <br>		JavaElementLabelProvider.SHOW_QUALIFIED | <br>		JavaElementLabelProvider.SHOW_ROOT);<br>	viewer.setLabelProvider(labelProvider);<br>	<br>	// Using the Java model as the viewers input present Java projects on the first level.<br>	viewer.setInput(JavaCore.create(ResourcesPlugin.getWorkspace().getRoot()));<br>	...</font><br><br></pre>
-            In addition to the Java model the <code>StandardJavaElementContentProvider</code>
-            class supports the following input element types: <code>IJavaProject</code>
-           , <code>IPackageFragmentRoot</code>, <code>IPackageFragment</code>
-     and   <code>  IFolder</code>.<br>
+<pre>	<font color="#4444cc">...<br>	IJavaProject jProject= ...;<br><br>	TreeViewer viewer= new TreeViewer(parent); <br>	// Provide members of a compilation unit or class file, but no working copy elements<br>	ITreeContentProvider contentProvider= new StandardJavaElementContentProvider(true, false);<br>	viewer.setContentProvider(contentProvider);<br>	// There are more flags defined in class JavaElementLabelProvider<br>	ILabelProvider labelProvider= new JavaElementLabelProvider(<br>		JavaElementLabelProvider.SHOW_DEFAULT | <br>		JavaElementLabelProvider.SHOW_QUALIFIED | <br>		JavaElementLabelProvider.SHOW_ROOT);<br>	viewer.setLabelProvider(labelProvider);<br>	<br>	// Using the Java model as the viewers input present Java projects on the first level.<br>	viewer.setInput(JavaCore.create(ResourcesPlugin.getWorkspace().getRoot()));<br>	...</font><br></pre>
+
+In addition to the Java model the <code>StandardJavaElementContentProvider</code>
+class supports the following input element types: <code>IJavaProject</code>, 
+<code>IPackageFragmentRoot</code>, <code>IPackageFragment</code>
+and <code>IFolder</code>.<br>
 <h3>Adding&nbsp; problem and override decorators</h3>
   When a viewer is supposed to include problem annotations, then a DecoratingLabelProvider 
 together with the <a href="../reference/api/org/eclipse/jdt/ui/ProblemsLabelDecorator.html"> 
 ProblemsLabelDecorator</a> is used. Below is a code snippet that outlines the 
 use of a &nbsp;problem label decorator:<br>
-<pre>	<font color="#4444cc">...<br>	DecoratingLabelProvider decorator= new DecoratingLabelProvider(labelProvider, new ProblemsLabelDecorator());	<br>	viewer.setLabelProvider(decorator);<br>	...</font><br><br></pre>
+<pre>	<font color="#4444cc">...<br>	DecoratingLabelProvider decorator= new DecoratingLabelProvider(labelProvider, new ProblemsLabelDecorator());	<br>	viewer.setLabelProvider(decorator);<br>	...</font><br><br>
+</pre>
            In the same way the <a href="../reference/api/org/eclipse/jdt/ui/OverrideIndicatorLabelDecorator.html">
            OverrideIndicatorLabelDecorator</a>
             can be used to decorate a normal label provider to show the implement
