Changed "show up" to appear

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -168,7 +168,7 @@
 
         <p class="Para">
           The compilation unit is compiled automatically and
-          errors show up in the Package Explorer view, in the Tasks view and on the
+          errors appear in the Package Explorer view, in the Tasks view and on the
           vertical ruler. In the Package Explorer view, the errors are propagated
           up to the project of the compilation unit containing the error.
         </p>
