--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-112.htm
@@ -31,7 +31,7 @@ Click the <b>Libraries</b> tab.</li>
 Click the<b> Advanced... </b>button.</li>
 
 <li>
-In the dialog that shows up, select the <b>Create New Class Folder</b>
+In the dialog that appears, select the <b>Create New Class Folder</b>
 and press the <b>OK</b> button.</li>
 
 <li>
@@ -40,7 +40,7 @@ the <b>OK</b> button.</li>
 </ol>
 To add an existing class folder, select <b>Add Existing Class Folder</b>
 instead of <b>Create New Class Folder</b> in the steps outlined above and
-select the folder in the dialog that shows up after you press <b>OK</b>.
+select the folder in the dialog that appears after you press <b>OK</b>.
 <p><img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><a href="../concepts/concepts-4.htm"></a>
 </p><p><a href="../concepts/concepts-4.htm">Java builder</a>
 <br><a href="../concepts/cbuildcp.htm">Build classpath</a>
