--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
@@ -17,7 +17,7 @@
   <li> In the Java editor, position the caret in a place where you want to insert 
     a template. </li>
   <li> Invoke content assist by pressing <kbd>Ctrl</kbd>+<kbd>Space</kbd>. </li>
-  <li> Templates show up in the presented list. Note that the list is filtered 
+  <li> Templates appear in the presented list. Note that the list is filtered 
     as you type, so typing a few first characters of a template name will reveal 
     it. </li>
   <li>Note that a preview is presented for each selected template.</li>
