--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
@@ -19,7 +19,7 @@ bar</li>
 
 <li>
 Select an encoding from the menu or select <b>Others</b> from the menu
-and, in the dialog that shows up, type in the encoding's name.</li>
+and, in the dialog that appears, type in the encoding's name.</li>
 </ul>
 <b>Note:</b> this setting affects only the way the source is presented.
 To change the encoding that the Java editor uses to save files, use preferences
