--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
@@ -31,7 +31,7 @@ block</b></li>
 
 <li>
 'catch' blocks for all uncaught exceptions (if there are any) are created.
-If there are no uncaught exceptions, a dialog shows up informing you about
+If there are no uncaught exceptions, a dialog appears informing you about
 this fact and asking if you want to create a 'catch' block for java.lang.RuntimeException.</li>
 </ul>
 
