--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
@@ -32,7 +32,7 @@ for the element and press <b>OK</b>.
 in the desired new location.
 <div class="para">
     <p><b>Note</b>: Dragging and dropping compilation units and types allows you 
-      to update references to these elements. In the dialog that show up on dropping, 
+      to update references to these elements. In the dialog that appears on dropping, 
       press <b>Yes</b> if you want to update references, press <b>Preview</b> 
       if you want to see the preview of the reference updates, press <b>No</b> 
       if you want to move the elements without updating references or press <b>Cancel</b> 
