--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-113.htm
@@ -42,7 +42,7 @@ JARs</b></span> button</li>
 </ul>
 
 <li>
-In the dialog that shows up, select the JAR file that you want to add.</li>
+In the dialog that appears, select the JAR file that you want to add.</li>
 </ol>
 <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
 <p><a href="../concepts/concepts-4.htm">Java builder</a>
