--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-cvs-11.htm
@@ -25,18 +25,18 @@ place when files are committed and checked out.
     any new files that are to be committed are added to CVS version control as 
     the keyword substitution mode can only be set for files that are already under 
     CVS control.</li>
-  <li>From the pop-up menu, select<b> Team &gt; Change ASCII/Binary Property</b> 
+  <li>From the pop-up menu, select<b> Team &gt; Change ASCII/Binary Property</b>.
     The Set Keyword Substitution Mode wizard will open.</li>
   <li>On the first page of the wizard, select the mode to be applied to the selected files: 
     <ul>
       <li><b>Automatic</b> - uses the file type to determine whether selected 
         resources should use binary or the default ASCII mode (the deafult ASCII 
-        mode is set on the CVS preferences page).</li>
+        mode is set on the Team > CVS preference page).</li>
       <li><b>Binary</b> - sets all selected files to binary. Files that are binary 
         are not altered in any way by CVS.</li>
       <li><b>ASCII without keyword substitution</b> - sets all the selected files 
         to ASCII but CVS does not perform any keyword substitution. The line endings 
-        of ASCII files may be altered by CVS.</li>
+        of ASCII files may be altered by CVS to align with a platform's line-terminator convention.</li>
       <li><b>ASCII with keyword substitution</b> - sets all the selected files 
         to ASCII and CVS will perform the selected type of keyword substitution.</li>
     </ul>
