--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-160.htm
@@ -21,7 +21,7 @@
     <div CLASS="FigureTitle">In the Variable name field, enter a name for the 
       extracted variable</div>
   </li>
-  <li>Optionally, unselect the <b>Replace all occurrences of the selected expression 
+  <li>Optionally, clear the <b>Replace all occurrences of the selected expression 
     with references to the local variable</b> checkbox if you want to replace 
     only the expression you selected when invoking the refactoring.</li>
   <li>Optionally, select <b>Define the local variable as 'final'</b></li>
