--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
@@ -46,7 +46,7 @@ or your accessor class uses another method with another name to get strings from
 the property file. 
 <ul>
 <li>
-Unselect the <b>Use default substitution pattern</b> checkbox</li>
+Clear the <b>Use default substitution pattern</b> checkbox</li>
 
 <li>
 In the <b>Substitution pattern</b> field enter the new pattern that will
