--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-191.htm
@@ -39,7 +39,7 @@ Package Explorer</b> checkbox</li>
 To hide members in Package Explorer:
 <ul>
 <li>
-Unselect the <b>Window > Preferences > Java > Appearance > Show members
+Clear the <b>Window > Preferences > Java > Appearance > Show members
 in Package Explorer</b> checkbox</li>
 </ul>
 
