--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-192.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-192.htm
@@ -22,7 +22,7 @@ indicators in outline and hierarchy</b> checkbox</li>
 To hide the override indicators:
 <ul>
 <li>
-Unselect the <b>Window > Preferences > Java > Appearance > Show override
+Clear the <b>Window > Preferences > Java > Appearance > Show override
 indicators in outline and hierarchy</b> checkbox</li>
 </ul>
 
