--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
@@ -22,7 +22,7 @@ types</b> checkbox</li>
 To hide method return types in Java views:
 <ul>
 <li>
-Unselect the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method
+Clear the <b>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show method
 return types</b> checkbox</li>
 </ul>
 
