--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-194.htm
@@ -16,7 +16,7 @@ names.
 <p>To show full package names:
 <ul>
 <li>
-Unselect the <b>Window > Preference > Java > Appearance > Compress package
+Clear the <b>Window > Preference > Java > Appearance > Compress package
 name segments</b> checkbox<b>.</b></li>
 </ul>
 To show compressed package names:
