--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
@@ -18,7 +18,7 @@ To show system files:
 the&nbsp;<span class=label><b>Filters</b></span> command from the Package
 Explorer view drop-down menu.
 
-  <p class="para">2.<span style='font:7.0pt "Times New Roman"'></span> Unselect 
+  <p class="para">2.<span style='font:7.0pt "Times New Roman"'></span> Clear 
     the <b>hide&nbsp;<span></span>.* files</b> checkbox. 
   <p class="para">To hide system files:
 
