--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -35,7 +35,7 @@ currently edited compilation unit will be revealed)</li>
 <div class=Section1>
 <div class="para">Note: The element might not be revealed if Package Explorer
 filters are active or the <b>Window > Preferences > Java > Appearance >
-Show Members in Package Explorer</b> preference is unselected.</div>
+Show Members in Package Explorer</b> preference is cleared.</div>
 
 <p><img SRC="../images/ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="../concepts/concepts-6.htm">Java views</a>
