--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-186.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-186.htm
@@ -18,7 +18,7 @@ Select the <b>Filters</b> command from the Package Explorer's drop-down
 menu.</li>
 
 <li>
-Unselect the <b>Hide non-Java elements</b> checkbox.</li>
+Clear the <b>Hide non-Java elements</b> checkbox.</li>
 </ol>
 To hide non-Java elements:
 <ol>
