--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
@@ -18,7 +18,7 @@ Select the <b>Filters</b> command from the Package Explorer's drop-down
 menu.</li>
 
 <li>
-Unselect the <b>Hide referenced libraries</b> checkbox.</li>
+Clear the <b>Hide referenced libraries</b> checkbox.</li>
 </ol>
 To hide libraries:
 <ol>
