--- a/bundles/org.eclipse.platform.doc.isv/guide/compare_beyond.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/compare_beyond.htm
@@ -123,11 +123,10 @@ interfaces.
 The
 <a href="../reference/api/org/eclipse/compare/HistoryItem.html"><b>HistoryItem</b></a>
 is a convenience class that implements these interfaces for
-<a href="../reference/api/org/eclipse/core/resources/IFileState.html"><b>IFileState</b></a>
-objects.
+<a href="../reference/api/org/eclipse/core/resources/IFileState.html"><b>IFileState</b></a>objects.
 <p>
 &nbsp;
 
-<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a></p>
+<p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
 </BODY>
 </HTML>
